--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,44 +1,69 @@
-#-------------------------------------------------------------------------------#
-#               Qodana analysis is configured by qodana.yaml file               #
-#             https://www.jetbrains.com/help/qodana/qodana-yaml.html            #
-#-------------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
+#               Qodana analysis configuration file                             #
+#             https://www.jetbrains.com/help/qodana/qodana-yaml.html           #
+#------------------------------------------------------------------------------#
+
+# Configuration file version
 version: "1.0"
 
-#Specify inspection profile for code analysis
+# Specify inspection profile for code analysis
+# qodana.starter - basic set of inspections
+# Other options: qodana.recommended, qodana.full, or custom profile name
 profile:
   name: qodana.starter
 
-#Enable inspections
-#include:
-#  - name: <SomeEnabledInspectionId>
+# Specify IDE to use for local analysis (without Docker)
+# QDJVMC - Qodana for JVM Community Edition
+# Use this when running locally without Docker
+linter: jetbrains/qodana-jvm-community:2025.1.2
 
-#Disable inspections
-#exclude:
-#  - name: <SomeDisabledInspectionId>
-#    paths:
-#      - <path/where/not/run/inspection>
+# Specify linter for Docker-based analysis
+# Uncomment this line if you want to use Docker instead of local IDE
+# linter: jetbrains/qodana-jvm-community:2025.2
 
-projectJDK: "21" #(Applied in CI/CD pipeline)
+# JDK version for JVM projects
+projectJDK: "21"
 
-#Execute shell command before Qodana execution (Applied in CI/CD pipeline)
-#bootstrap: sh ./prepare-qodana.sh
+# Enable inspections that are disabled in the profile
+# include:
+#   - name: <SomeEnabledInspectionId>
 
-#Install IDE plugins before Qodana execution (Applied in CI/CD pipeline)
-#plugins:
-#  - id: <plugin.id> #(plugin id can be found at https://plugins.jetbrains.com)
+# Disable specific inspections
+# exclude:
+#   - name: <SomeDisabledInspectionId>
+#     paths:
+#       - <path/where/not/run/inspection>
 
-# Quality gate. Will fail the CI/CD pipeline if any condition is not met
-# severityThresholds - configures maximum thresholds for different problem severities
-# testCoverageThresholds - configures minimum code coverage on a whole project and newly added code
-# Code Coverage is available in Ultimate and Ultimate Plus plans
-#failureConditions:
-#  severityThresholds:
-#    any: 15
-#    critical: 5
-#  testCoverageThresholds:
-#    fresh: 70
-#    total: 50
-  
-#Qodana supports other languages, for example, Python, JavaScript, TypeScript, Go, C#, PHP
-#For all supported languages see https://www.jetbrains.com/help/qodana/linters.html
-linter: jetbrains/qodana-jvm-community:2025.2
+# Execute shell command before Qodana execution (useful for project preparation)
+# bootstrap: sh ./prepare-qodana.sh
+
+# Install IDE plugins before Qodana execution
+# plugins:
+#   - id: <plugin.id> # Plugin ID from JetBrains Marketplace
+
+# Quality gate configuration
+# Will fail the CI/CD pipeline if any condition is not met
+# failureConditions:
+#   # Maximum number of problems allowed
+#   severityThresholds:
+#     any: 15
+#     critical: 5
+#   # Minimum code coverage requirements (available in Ultimate plans)
+#   testCoverageThresholds:
+#     fresh: 70
+#     total: 50
+
+# Disable sanity checks if needed
+# disableSanity: true
+
+# Configure quick-fixes strategy
+# Options: apply-all, apply-safe, apply-none (default)
+# fixesStrategy: apply-safe
+
+# License audit configuration (for dependency license checking)
+# licenseRules:
+#   # Allow or prohibit specific licenses
+#   unapproved: GPL-2.0-only, MIT
+#   # Ignore specific dependencies
+#   ignore:
+#     - name: some-internal-dependency
