--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,69 +1,6 @@
-#------------------------------------------------------------------------------#
-#               Qodana analysis configuration file                             #
-#             https://www.jetbrains.com/help/qodana/qodana-yaml.html           #
-#------------------------------------------------------------------------------#
-
-# Configuration file version
 version: "1.0"
-
-# Specify inspection profile for code analysis
-# qodana.starter - basic set of inspections
-# Other options: qodana.recommended, qodana.full, or custom profile name
+linter: jetbrains/qodana-jvm:2025.1
 profile:
-  name: qodana.starter
-
-# Specify IDE to use for local analysis (without Docker)
-# QDJVMC - Qodana for JVM Community Edition
-# Use this when running locally without Docker
-linter: jetbrains/qodana-jvm-community:2025.1.2
-
-# Specify linter for Docker-based analysis
-# Uncomment this line if you want to use Docker instead of local IDE
-# linter: jetbrains/qodana-jvm-community:2025.2
-
-# JDK version for JVM projects
-projectJDK: "21"
-
-# Enable inspections that are disabled in the profile
-# include:
-#   - name: <SomeEnabledInspectionId>
-
-# Disable specific inspections
-# exclude:
-#   - name: <SomeDisabledInspectionId>
-#     paths:
-#       - <path/where/not/run/inspection>
-
-# Execute shell command before Qodana execution (useful for project preparation)
-# bootstrap: sh ./prepare-qodana.sh
-
-# Install IDE plugins before Qodana execution
-# plugins:
-#   - id: <plugin.id> # Plugin ID from JetBrains Marketplace
-
-# Quality gate configuration
-# Will fail the CI/CD pipeline if any condition is not met
-# failureConditions:
-#   # Maximum number of problems allowed
-#   severityThresholds:
-#     any: 15
-#     critical: 5
-#   # Minimum code coverage requirements (available in Ultimate plans)
-#   testCoverageThresholds:
-#     fresh: 70
-#     total: 50
-
-# Disable sanity checks if needed
-# disableSanity: true
-
-# Configure quick-fixes strategy
-# Options: apply-all, apply-safe, apply-none (default)
-# fixesStrategy: apply-safe
-
-# License audit configuration (for dependency license checking)
-# licenseRules:
-#   # Allow or prohibit specific licenses
-#   unapproved: GPL-2.0-only, MIT
-#   # Ignore specific dependencies
-#   ignore:
-#     - name: some-internal-dependency
+  name: qodana.recommended
+include:
+  - name: CheckDependencyLicenses
