Update Qodana configuration in gradle-ci.yml

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Java CI with Gradle and Qodana Cloud
 
 on:
   push:
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Get full history of the git for Qodana
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -38,10 +40,8 @@ jobs:
       - name: Grant execute permission for Gradle
         run: chmod +x backend/gradlew
 
-
       - name: Build and Run Tests
         run: cd backend && ./gradlew build --no-daemon
-
 
       - name: Upload test reports
         uses: actions/upload-artifact@v4
@@ -50,47 +50,22 @@ jobs:
           path: backend/build/reports/tests/test
           if-no-files-found: warn
 
-
       # Qodana Scan for Backend (JVM)
       - name: Qodana Backend (JVM)
-        uses: JetBrains/qodana-action@latest
+        uses: JetBrains/qodana-action@v2025.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
-          # Use JVM community linter for backend code analysis
-          linter: jetbrains/qodana-jvm-community:2025.1.2
-          # Specify backend directory as project root for this scan
-          project-dir: backend
-          # Use the root qodana.yml config file
-          config: ../qodana.yml
-          # Path to baseline file for backend
-          baseline: backend/qodana/baseline.xml
-          baseline-absentees: false
-          pr-mode: true
-          use-caches: true
+          args: --linter jetbrains/qodana-jvm-community:2025.1 --project-dir backend --baseline backend/qodana/baseline.xml
           post-pr-comment: true
           use-annotations: true
-          upload-result: false
-          push-fixes: 'none'
 
       # Qodana Scan for Frontend (JavaScript/TypeScript)
       - name: Qodana Frontend (JS)
-        uses: JetBrains/qodana-action@latest
+        uses: JetBrains/qodana-action@v2025.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
-          # Use JavaScript linter for frontend code analysis
-          linter: jetbrains/qodana-js:2025.1.2
-          # Specify frontend directory as project root for this scan
-          project-dir: frontend
-          # Use the root qodana.yml config file
-          config: ../qodana.yml
-          # Path to baseline file for frontend (if exists)
-          baseline: frontend/qodana/baseline.xml
-          baseline-absentees: false
-          pr-mode: true
-          use-caches: true
+          args: --linter jetbrains/qodana-js:2025.1 --project-dir frontend --baseline frontend/qodana/baseline.xml
           post-pr-comment: true
           use-annotations: true
-          upload-result: false
-          push-fixes: 'none'
