--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'jacoco'  // Add JaCoCo plugin
 }
 
 group = 'com.example'
@@ -25,4 +26,37 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport  // Generate report after tests run
 }
+
+// JaCoCo configuration
+jacoco {
+    toolVersion = "0.8.11"  // Latest stable version
+}
+
+jacocoTestReport {
+    dependsOn test  // Tests are required to run before generating the report
+
+    reports {
+        xml.required = true    // Enable XML report for CI/CD tools
+        html.required = true   // Enable HTML report for local viewing
+        csv.required = false   // Disable CSV report (optional)
+    }
+
+    // Optional: Configure report location
+    // reports.html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+}
+
+// Optional: Add coverage verification rules
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.80  // Require 80% coverage
+            }
+        }
+    }
+}
+
+// Make sure tests run before verification
+check.dependsOn jacocoTestCoverageVerification
