--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Get full history of the git for Qodana
+          fetch-depth: 0
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -40,14 +40,21 @@ jobs:
       - name: Grant execute permission for Gradle
         run: chmod +x backend/gradlew
 
-      - name: Build and Run Tests
-        run: cd backend && ./gradlew build --no-daemon
+      - name: Build and Run Tests with Coverage
+        run: cd backend && ./gradlew build jacocoTestReport --no-daemon
 
       - name: Upload test reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: backend/build/reports/tests/test
+          if-no-files-found: warn
+
+      - name: Upload JaCoCo coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: backend/build/reports/jacoco/test/
           if-no-files-found: warn
 
       # Qodana Scan for Backend (JVM)
