--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -101,18 +101,18 @@ jobs:
       # Step 9: Run Qodana analysis for the Frontend (JS/TS) code
       # Uses Pro linter and requires QODANA_TOKEN for Qodana Cloud connection.
       # The '--project-dir' argument specifies the directory to analyze.
-      - name: Qodana Frontend (JS) Scan
-        uses: JetBrains/qodana-action@v2025.1
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }} # Ensure this secret exists and holds the correct Project Token from Qodana Cloud
-          # QODANA_ENDPOINT is not needed for standard Qodana Cloud
-        with:
-          # Use 'args' to pass command-line arguments to the qodana CLI, like '--project-dir'
-          args: --project-dir,frontend
-          # Use supported parameters for GitHub integration
-          post-pr-comment: true # Post a comment on the Pull Request with results
-          use-annotations: true # Add annotations to the code in the PR
-          upload-result: true   # Upload the full analysis results to Qodana Cloud
+#      - name: Qodana Frontend (JS) Scan
+#        uses: JetBrains/qodana-action@v2025.1
+#        env:
+#          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1954113934 }} # Ensure this secret exists and holds the correct Project Token from Qodana Cloud
+#          # QODANA_ENDPOINT is not needed for standard Qodana Cloud
+#        with:
+#          # Use 'args' to pass command-line arguments to the qodana CLI, like '--project-dir'
+#          args: --project-dir,frontend
+#          # Use supported parameters for GitHub integration
+#          post-pr-comment: true # Post a comment on the Pull Request with results
+#          use-annotations: true # Add annotations to the code in the PR
+#          upload-result: true   # Upload the full analysis results to Qodana Cloud
           # Removed 'linter:', 'project-dir:', 'cache:' as they are not valid 'with:' inputs for this action version
           # Caching is enabled by default in recent action versions, or can be controlled via 'use-caches'
 
