--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'jacoco'  // Add JaCoCo plugin
+    id 'checkstyle'  // Add Checkstyle plugin for code style verification
 }
 
 group = 'com.example'
@@ -60,3 +61,55 @@ jacocoTestCoverageVerification {
 
 // Make sure tests run before verification
 check.dependsOn jacocoTestCoverageVerification
+
+// Checkstyle configuration
+checkstyle {
+    toolVersion = '10.12.1'  // Latest stable version
+    configFile = file("config/checkstyle/checkstyle.xml")
+    // Fail build on checkstyle violations
+    maxWarnings = 0
+    maxErrors = 0
+}
+
+checkstyleMain {
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
+checkstyleTest {
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
+// Make checkstyle run as part of the check task
+check.dependsOn checkstyleMain, checkstyleTest
+
+// GitLeaks security scan task
+// Run manually when needed: ./gradlew gitleaks
+task gitleaks(type: Exec) {
+    description = 'Run GitLeaks secret detection scan'
+    group = 'verification'
+
+    // Command to execute
+    commandLine 'gitleaks', 'detect', '--source', '.', '--verbose'
+
+    // Don't fail build if gitleaks is not installed
+    ignoreExitValue = true
+
+    // Show start message
+    doFirst {
+        println "🔍 Starting GitLeaks secret detection scan..."
+    }
+
+    // Show completion message
+    doLast {
+        println "✅ GitLeaks scan completed"
+    }
+}
+
+// Optional: Add to check task
+// check.dependsOn gitleaks
