--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -51,6 +51,7 @@ tasks.jacocoTestReport {
     reports {
         xml.required = true
         html.required = true
+        csv.required = false
     }
 }
 
